--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 ################################################################################
 #
 #  This file is part of SplashSync Project.
-# 
+#
 #  Copyright (C) Splash Sync <www.splashsync.com>
-# 
+#
 #  This program is distributed in the hope that it will be useful,
 #  but WITHOUT ANY WARRANTY; without even the implied warranty of
 #  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-# 
+#
 #  For the full copyright and license information, please view the LICENSE
 #  file that was distributed with this source code.
-# 
+#
 #  @author Bernard Paquier <contact@splashsync.com>
 #
 ################################################################################
@@ -22,7 +22,7 @@
 # for Splash Optilog Connector
 #
 # For a faster access to you container, you can add this IP to /etc/hosts
-# 
+#
 #    172.118.0.100       toolkit.sellsy.local
 #    172.118.0.200       sandbox.sellsy.local
 #
@@ -31,9 +31,9 @@
 version: '2.2'
 
 services:
-    
+
     ################################################################################
-    # Splash Toolkit Container   
+    # Splash Toolkit Container
     toolkit:
         image: 'splashsync/toolkit:alpine'
         container_name: toolkit.sellsy.local
@@ -60,7 +60,7 @@ services:
         container_name: sandbox.sellsy.local
         volumes:
 #             # Specify API Entities to Use
-            - './docker/sandbox/Controller:/srv/api/src/Controller:ro'
+#            - './docker/sandbox/Controller:/srv/api/src/Controller:ro'
             - './docker/sandbox/Serializer:/srv/api/src/Serializer:ro'
             - './docker/sandbox/Entity:/srv/api/src/Entity:ro'
             - './docker/sandbox/sellsy.yaml:/srv/api/config/packages/sellsy.yaml:ro'
@@ -84,7 +84,7 @@ services:
 
 networks:
     ################################################################################
-    # Default Private Network    
+    # Default Private Network
     shippingbo:
         driver: bridge
         ipam:
