--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,9 +17,9 @@
 
     <testsuites>
         <testsuite name="All">
-            <directory>tests/Controller/S00MinimalObjectsTest.php</directory>
+<!--            <directory>tests/Controller/S00MinimalObjectsTest.php</directory>-->
             <directory>vendor/splash/phpcore/Tests/*</directory>
-<!--            <directory>vendor/splash/php-bundle/phpunit/*</directory>-->
+            <directory>vendor/splash/php-bundle/phpunit/*</directory>
             <directory>tests/*</directory>
         </testsuite>
     </testsuites>
