--- a/docker/sandbox/sellsy.yaml
+++ b/docker/sandbox/sellsy.yaml
@@ -17,7 +17,14 @@ api_platform:
             client_items_per_page: true                     # Disabled by default
             items_per_page_parameter_name: limit            # Default value
 
+    ########################################################################
+    # Enable CamelCase To SnakeCase Conversion
+    name_converter: 'Symfony\Component\Serializer\NameConverter\CamelCaseToSnakeCaseNameConverter'
+
 services:
+    ########################################################################
+    # Register CamelCase To SnakeCase Conversion
+    Symfony\Component\Serializer\NameConverter\CamelCaseToSnakeCaseNameConverter: ~
 
     ########################################################################
     # ShippingBo Normalizer
