--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@
 #
 ################################################################################
 
+version: '3.4'
+
 services:
 
     ################################################################################
