--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,10 +61,10 @@ functional:
         # Install Git, Bash, Curl & Docker Compose
         - apk add --no-cache curl bash git # docker-compose
         # Install & Build Docker Compose
-        - docker network create splashsync --attachable
-        - cp .env.dist .env
-        - docker compose up -d
-#        - curl -s https://raw.githubusercontent.com/BadPixxel/Php-Sdk/main/toolkit/build.sh  | bash
+#        - docker network create splashsync --attachable
+#        - cp .env.dist .env
+#        - docker compose up -d
+        - curl -s https://raw.githubusercontent.com/BadPixxel/Php-Sdk/main/toolkit/build.sh  | bash
 
     ################################################################################
     # Run Test Script
@@ -73,7 +73,6 @@ functional:
         - sleep 10
         - docker compose exec -T toolkit curl http://openapi/
         # Execute PhpUnit Tests
-#        - docker-compose exec -T toolkit php vendor/bin/phpunit tests/Controller/S00MinimalObjectsTest.php
         - curl -s https://raw.githubusercontent.com/BadPixxel/Php-Sdk/main/toolkit/phpunit.sh  | bash
         # Build Splash Manifest
         - curl -s https://raw.githubusercontent.com/BadPixxel/Php-Sdk/main/toolkit/manifest.sh  | bash
