--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
             - './config/packages/splash.yaml:/app/config/packages/splash.yaml:ro'
             # Uncomment to use Local Sources instead of Release
             - './src:/app/connectors/Sellsy/:ro'
+#            - '/home/william/splash/Php-Core:/app/vendor/splash/phpcore/:ro'
 #            - '/mnt/data/WebDesign/GitHub/Splash/Php-Oauth2:/app/vendor/splash/oauth2/:ro'
 #            - './vendor/league/oauth2-client:/app/vendor/league/oauth2-client/:ro'
 #            - './tests/Controller:/app/tests/Controller/:ro'
