--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,13 @@ include:
     - remote: 'https://raw.githubusercontent.com/BadPixxel/Php-Sdk/main/gitlab/pages.yaml'
 
 ################################################################
+# Defined Pipeline Stages
+stages:
+    - Quality
+    - Functional
+    - Builds
+
+################################################################
 # Quality Tests
 ################################################################
 
@@ -41,7 +48,7 @@ quality:php-8.1:
 # Functional Tests
 ################################################################
 functional:
-    image:      docker:stable
+    image:      docker:latest
     stage:      Functional
     retry:      1
     tags:
@@ -52,7 +59,7 @@ functional:
     # Install & Configure Environment
     before_script:
         # Install Git, Bash, Curl & Docker Compose
-        - apk add --no-cache curl bash git docker-compose
+        - apk add --no-cache curl bash git # docker-compose
         # Install & Build Docker Compose
         - curl -s https://raw.githubusercontent.com/BadPixxel/Php-Sdk/main/toolkit/build.sh  | bash
 
@@ -61,9 +68,8 @@ functional:
     script:
         # Wait for container to Start
         - sleep 10
-        - docker-compose exec -T toolkit curl http://openapi/
+        - docker compose exec -T toolkit curl http://openapi/
         # Execute PhpUnit Tests
-        - docker-compose exec -T toolkit php vendor/bin/phpunit tests/Controller/S00MinimalObjectsTest.php
         - curl -s https://raw.githubusercontent.com/BadPixxel/Php-Sdk/main/toolkit/phpunit.sh  | bash
         # Build Splash Manifest
         - curl -s https://raw.githubusercontent.com/BadPixxel/Php-Sdk/main/toolkit/manifest.sh  | bash
