--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 ################################################################################
 #
 #  This file is part of SplashSync Project.
-# 
+#
 #  Copyright (C) Splash Sync <www.splashsync.com>
-# 
+#
 #  This program is distributed in the hope that it will be useful,
 #  but WITHOUT ANY WARRANTY; without even the implied warranty of
 #  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-# 
+#
 #  For the full copyright and license information, please view the LICENSE
 #  file that was distributed with this source code.
-# 
+#
 #  @author Bernard Paquier <contact@splashsync.com>
 #
 ################################################################################
@@ -18,22 +18,20 @@
 ################################################################################
 # Docker Compose File
 #
-# This Docker File intend to Create a Complete Dev Environnement
-# for Splash Optilog Connector
+# This Docker File intend to Create a Complete Dev Environment
+# for Splash Sellsy Connector
 #
 # For a faster access to you container, you can add this IP to /etc/hosts
-# 
+#
 #    172.118.0.100       toolkit.sellsy.local
 #    172.118.0.200       sandbox.sellsy.local
 #
 ################################################################################
 
-version: '2.2'
-
 services:
-    
+
     ################################################################################
-    # Splash Toolkit Container   
+    # Splash Toolkit Container
     toolkit:
         image: 'splashsync/toolkit:alpine'
         container_name: toolkit.sellsy.local
@@ -42,10 +40,11 @@ services:
             - './config/packages/splash.yaml:/app/config/packages/splash.yaml:ro'
             # Uncomment to use Local Sources instead of Release
             - './src:/app/connectors/Sellsy/:ro'
+#            - '/home/william/splash/Php-Core:/app/vendor/splash/phpcore/:ro'
 #            - '/mnt/data/WebDesign/GitHub/Splash/Php-Oauth2:/app/vendor/splash/oauth2/:ro'
 #            - './vendor/league/oauth2-client:/app/vendor/league/oauth2-client/:ro'
 #            - './tests/Controller:/app/tests/Controller/:ro'
-#            - './phpunit.xml.dist:/app/phpunit.xml.dist:ro'
+            - './phpunit.xml.dist:/app/phpunit.xml.dist:ro'
         env_file:
             - .env
         hostname:           toolkit.sellsy.local
@@ -59,7 +58,7 @@ services:
         image: 'splashsync/openapi-sandbox'
         container_name: sandbox.sellsy.local
         volumes:
-#             # Specify API Entities to Use
+             # Specify API Entities to Use
             - './docker/sandbox/Controller:/srv/api/src/Controller:ro'
             - './docker/sandbox/Serializer:/srv/api/src/Serializer:ro'
             - './docker/sandbox/Entity:/srv/api/src/Entity:ro'
@@ -84,7 +83,7 @@ services:
 
 networks:
     ################################################################################
-    # Default Private Network    
+    # Default Private Network
     shippingbo:
         driver: bridge
         ipam:
