--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,9 +17,9 @@
 
     <testsuites>
         <testsuite name="All">
-            <directory>tests/Controller/S00MinimalObjectsTest.php</directory>
+<!--            <directory>tests/Controller/S00MinimalObjectsTest.php</directory>-->
             <directory>vendor/splash/phpcore/Tests/*</directory>
-<!--            <directory>vendor/splash/php-bundle/phpunit/*</directory>-->
+            <directory>vendor/splash/php-bundle/phpunit/*</directory>
             <directory>tests/*</directory>
         </testsuite>
     </testsuites>
@@ -34,6 +34,8 @@
 
         <!-- Only Test Specified Sequence -->
         <const  name="SPLASH_SEQUENCE"  value="Sellsy Sandbox" />
+<!--        <const  name="SPLASH_TYPES"     value="Address" />-->
+<!--        <const  name="SPLASH_FIELDS"     value="civility" />-->
     </php>
 
 </phpunit>
