--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,7 @@ services:
              # Specify API Entities to Use
             - './docker/sandbox/Controller:/srv/api/src/Controller:ro'
             - './docker/sandbox/Serializer:/srv/api/src/Serializer:ro'
+            - './docker/sandbox/Migrations:/srv/api/migrations:ro'
             - './docker/sandbox/Entity:/srv/api/src/Entity:ro'
             - './docker/sandbox/sellsy.yaml:/srv/api/config/packages/sellsy.yaml:ro'
         hostname:           sandbox.sellsy.local
